--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frase 1</title>
+    <title>Frase 2</title>
 </head>
 <body>
-    <h1>Frase 1</h1>
-    <p>"A jornada pode ser longa, mas cada passo nos aproxima do nosso destino. Vamos manter o foco e avançar juntos!"</p>
+    <h1>Frase 2</h1>
+    <p>"Grandes coisas nunca vêm de zonas de conforto. Desafiem-se a cada dia e vejam até onde podem chegar."</p>
 </body>
 </html>
