--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Frase 2</title>
+    <title>Frase 3</title>
 </head>
 <body>
-    <h1>Frase 2</h1>
-    <p>"Grandes coisas nunca vêm de zonas de conforto. Desafiem-se a cada dia e vejam até onde podem chegar."</p>
+    <h1>Frase 3</h1>
+    <p>A chave do sucesso é começar antes de estar pronto. Acredite no seu potencial e dê o primeiro passo agora!</p>
 </body>
 </html>
